tests/ui_board/snapshots/ui_board__first_run__managed_practice_board_narrow.snap
---
source: tests/ui_board/first_run.rs
assertion_line: 27
expression: "snapshot(FirstRunEnvironment::HerdrManaged, 34, 12, 4,)"
---
SIZE 34x12

TEXT
00│  Herdr is detected. It organizes│
01│  agent panes. With Proqi│
02│⋮ integration enabled, press s to│
03│  submit when it verifies a│
04│  compatible adjacent agent.│
05│  Learn more at https://herdr.dev│
06│  ────────────────────────────────│
07│  Press a and d in board mode to│
08││
09│  proqi-ui-first-run│
10│  6 thoughts · board · saved│
11│  n New   : Commands│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-28 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 29-29 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 30-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-15 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 16-32 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=UNDERLINED | 33-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-33 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
7: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-8 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 9-13 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 14-14 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 15-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-31 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 32-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
