tests/ui_board/snapshots/ui_board__first_run__managed_practice_board_narrow@macos.snap
---
source: tests/ui_board/first_run.rs
assertion_line: 29
expression: "snapshot(FirstRunEnvironment::HerdrManaged, 34, 12, 4,)"
---
SIZE 34x12

TEXT
00││
01│  /plan starts a planning prompt│
02│  when a compatible adjacent│
03│⋮ Codex or Claude Code agent is│
04│  verified.│
05││
06│  8 more lines  expand│
07││
08││
09│  proqi-ui-first-run│
10│  6 thoughts · board · saved│
11│  n New   : Commands│

STYLE RUNS
0: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-33 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
6: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-1 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 2-33 fg=Rgb(112, 214, 155) bg=Reset mod=DIM
7: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-31 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 32-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-33 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
