tests/ui_board/snapshots/ui_board__first_run__standalone_practice_board_standard.snap
---
source: tests/ui_board/first_run.rs
assertion_line: 40
expression: "snapshot(FirstRunEnvironment::Standalone, 72, 18, 4,)"
---
SIZE 72x18

TEXT
00│  In edit mode, type $name, /name, or supported @name to complete│
01│  discovered local invocations.│
02│  ──────────────────────────────────────────────────────────────────────│
03│  Use j or ↓ to move to the next thought, and k or ↑ to move to the│
04│  previous one. Press Space to select, d to delete, and u to undo.│
05│  ──────────────────────────────────────────────────────────────────────│
06│  Proqi works on its own. Herdr adds verified adjacent submission. In│
07│⋮ board mode, use s to submit and remove or S to keep. In edit mode,│
08│  use Primary+Enter to submit and remove or Primary+Shift+Enter to│
09│  keep. Learn more at https://herdr.dev│
10│  ──────────────────────────────────────────────────────────────────────│
11│  Press a and d in board mode to delete this entire practice board.│
12││
13│                              + New thought│
14││
15│  proqi-ui-first-run│
16│  6 thoughts · board · saved│
17│  n New   y Copy  x Cut  d/Del  Space Select u Undo  / Search│

STYLE RUNS
0: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-71 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
3: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 7-10 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 11-11 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 12-45 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 46-46 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 47-50 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 51-51 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 52-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-26 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 27-38 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 39-39 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 40-55 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 56-56 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 57-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-71 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
6: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
7: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-17 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 19-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 44-44 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 45-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
8: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-5 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 6-18 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 19-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 44-62 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 63-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
9: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-21 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 22-38 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=UNDERLINED | 39-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-71 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
11: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-8 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 9-13 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 14-14 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 15-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-29 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 30-30 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 31-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
14: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
15: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
16: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
17: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-29 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 30-31 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 32-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-44 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 45-45 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 46-52 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 53-53 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 54-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
